--- a/app/templates/rentals.hbs
+++ b/app/templates/rentals.hbs
@@ -5,4 +5,8 @@
   {{#link-to 'about' class="button"}}
     About Us
   {{/link-to}}
+
+  {{#each model as |rentalUnit|}}
+    {{rental-listing rental=rentalUnit}}
+  {{/each}}
 </div>
